--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chin-plugin-unified",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "repository": "https://github.com/kthjm/chin-plugin-unified",
   "author": "kthjm <toxictoxer@gmail.com>",
   "main": "index.js",
@@ -35,7 +35,6 @@
     "babel-plugin-istanbul": "^4.1.6",
     "babel-preset-env": "^1.6.1",
     "babel-preset-power-assert": "^2.0.0",
-    "chin": "^3.0.4",
     "codecov": "^3.0.1",
     "cross-env": "^5.1.4",
     "mocha": "^5.1.1",
@@ -43,5 +42,8 @@
     "power-assert": "^1.5.0",
     "rehype-remark": "^3.0.0",
     "remark-rehype": "^3.0.0"
+  },
+  "peerDependencies": {
+    "chin": "^3.0.5"
   }
 }
